# BOLT

./: .gitignore  Implementation-notes.md  README.md  bluetooth-protocol.md  bluetooth.cpp  bluetooth.h  bolt-arduino.ino  bolt.ino  button.cpp  button.h  clock.cpp  clock.h  const.h  constants.h  controller.cpp  controller.h  flasher.cpp  flasher.h  game.cpp  game.h  helper.cpp  helper.h  led.cpp  led.h  logger.cpp  logger.h  pubspec.yaml  screen.cpp  screen.h  timer.cpp  timer.h
PCB-boards-for-leds/: LED board.brd
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/boltflutter/: MainActivity.java
arduino/: CMakeLists.txt  README.md  arduino.ino  bluetooth-send-receive-test.cpp  bluetooth.cpp  button.cpp  button.h  constants.h  flasher.cpp  game.cpp  game.h  led.cpp  led.h  logger.cpp  main.cpp  main.h  screen.cpp  screen.h  tests.cpp  tests.h  timer.cpp  timer.h
arduino/Led PCB Board Design/: LED board.sch
arduino/led-tester/: constants.h  led-tester.ino  led.cpp  led.h
arduino/lib/: bluetooth.cpp  bluetooth.h  bluetoothManager.cpp  bluetoothManager.h  button-debug.cpp  button-debug.h  button-interface.h  button-manager.cpp  button-manager.h  button.cpp  button.h  buttonReceiver.cpp  buttonReceiver.h  buttonSerialReceiver.cpp  buttonSerialReceiver.h  buttonShieldReceiver.cpp  buttonShieldReceiver.h  constants.h  doneGameCallback.h  flasher.cpp  flasher.h  game.cpp  game.h  led-manager.cpp  led-manager.h  led.cpp  led.h  ledController.cpp  ledController.h  logger.cpp  logger.h  main.ino  offlineGame.cpp  offlineGame.h  returnToReadyModeCallback.h  returnToStartingStateCallback.h  runnablesManager.cpp  runnablesManager.h  screen.cpp  screen.h  (+6 more)
arduino/main/: bluetooth.cpp  main.ino  screen.h  tests.cpp
arduino/src/: bluetooth-send-receive-test.cpp  main.cpp  tests.cpp
arduino/src/lib/: bluetooth.h
bolt-arduino/: README.md  bluetooth.cpp  button.h  constants.h
bolt-mobile/: .gitignore
bolt-mobile/test/: widget_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: bluetooth.dart  game.dart  gamescreen.dart  homescreen.dart  main.dart
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle
mobile/android/gradle/wrapper/: gradle-wrapper.properties
mobile/lib/: bluetooth.dart  bluetoothConnection.dart  bluetoothConnector.dart  gameLogic.dart  gamescreen.dart  homescreen.dart  main.dart
test/: widget_test.dart
